add new route getCoin
