# src/routes/coin.routes.js
@@ -5,6 +5,7 @@ const coins = require('../controllers/coin.controller');
 const { verifyCoinCode } = require ('../middleware/registryVerify');
 
 router.get('/', coins.getCoins);
+router.get('/getCoin/:code', coins.getCoinCode);
 router.post('/registry', verifyCoinCode,  coins.createCoin);
 
 module.exports = router;
